--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "description": "gromcode-js-project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "style:watch": "sass ./src/styles/index.scss ./dist/styles.css --watch",
+    "build:styles": "sass ./src/styles/index.scss ./dist/styles.css",
+    "copy:html": "cp ./src/index.html ./dist/index.html",
+    "copy:scripts": "cp -R ./src/scripts ./dist/scripts",
+    "clean": "rm -rf ./dist",
+    "build": "npm-run-all clean build:styles copy:*"
   },
   "repository": {
     "type": "git",
@@ -15,5 +22,11 @@
   "bugs": {
     "url": "https://github.com/MVprogramm/todo-list-new/issues"
   },
-  "homepage": "https://github.com/MVprogramm/todo-list-new#readme"
+  "homepage": "https://github.com/MVprogramm/todo-list-new#readme",
+  "devDependencies": {
+    "@babel/preset-env": "^7.17.12",
+    "jest": "^28.1.0",
+    "npm-run-all": "^4.1.5",
+    "sass": "^1.51.0"
+  }
 }
