--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "style:watch": "sass ./src/styles/index.scss ./dist/styles.css --watch",
     "build:styles": "sass ./src/styles/index.scss ./dist/styles.css",
     "copy:html": "cp ./src/index.html ./dist/index.html",
-    "copy:scripts": "cp -R ./src/scripts ./dist/scripts",
+    "build:scripts": "babel ./src --out-dir=./dist",
     "clean": "rm -rf ./dist",
-    "build": "npm-run-all clean build:styles copy:*"
+    "build": "npm-run-all clean build:* copy:*"
   },
   "repository": {
     "type": "git",
@@ -24,9 +24,14 @@
   },
   "homepage": "https://github.com/MVprogramm/todo-list-new#readme",
   "devDependencies": {
+    "@babel/cli": "^7.17.10",
+    "@babel/core": "^7.18.0",
     "@babel/preset-env": "^7.17.12",
     "jest": "^28.1.0",
     "npm-run-all": "^4.1.5",
     "sass": "^1.51.0"
+  },
+  "dependencies": {
+    "core-js": "^3.22.5"
   }
 }
