--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
-    "style:watch": "sass ./src/styles/index.scss ./dist/styles.css --watch",
-    "build:styles": "sass ./src/styles/index.scss ./dist/styles.css",
     "copy:html": "cp ./src/index.html ./dist/index.html",
-    "build:scripts": "babel ./src --out-dir=./dist",
+    "build:scripts": "webpack -p",
     "clean": "rm -rf ./dist",
-    "build": "npm-run-all clean build:* copy:*"
+    "build": "npm-run-all clean build:* copy:*",
+    "watch": "webpack -d --devtools eval-source-maps -w"
   },
   "repository": {
     "type": "git",
@@ -27,9 +26,17 @@
     "@babel/cli": "^7.17.10",
     "@babel/core": "^7.18.0",
     "@babel/preset-env": "^7.17.12",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.3.2",
+    "file-loader": "^5.0.2",
     "jest": "^28.1.0",
     "npm-run-all": "^4.1.5",
-    "sass": "^1.51.0"
+    "sass": "^1.51.0",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.1",
+    "url-loader": "^3.0.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10"
   },
   "dependencies": {
     "core-js": "^3.22.5"
