--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
-    "copy:html": "cp ./src/index.html ./dist/index.html",
-    "build:scripts": "webpack -p",
-    "clean": "rm -rf ./dist",
-    "build": "npm-run-all clean build:* copy:*",
+    "build": "webpack -p",
     "watch": "webpack -d --devtools eval-source-maps -w"
   },
   "repository": {
@@ -27,9 +24,12 @@
     "@babel/core": "^7.18.0",
     "@babel/preset-env": "^7.17.12",
     "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.3.2",
     "file-loader": "^5.0.2",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^28.1.0",
+    "mini-css-extract-plugin": "^0.8.0",
     "npm-run-all": "^4.1.5",
     "sass": "^1.51.0",
     "sass-loader": "^8.0.0",
