--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "gromcode-js-project",
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server -d --devtools eval-source-maps --open",
     "test": "jest",
     "test:watch": "jest --watch",
-    "build": "webpack -p",
-    "watch": "webpack -d --devtools eval-source-maps -w"
+    "build": "webpack -p"
   },
   "repository": {
     "type": "git",
@@ -30,13 +30,13 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^28.1.0",
     "mini-css-extract-plugin": "^0.8.0",
-    "npm-run-all": "^4.1.5",
     "sass": "^1.51.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.1",
     "url-loader": "^3.0.0",
     "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
     "core-js": "^3.22.5"
